fixed the way expansion gets styled after expanding to leave no gaps and encapsulate the cards with a rounded border

--- a/ezFA/src/app/FinancialsContainer/financials-container/financials-container.component.css
+++ b/ezFA/src/app/FinancialsContainer/financials-container/financials-container.component.css
@@ -37,6 +37,32 @@ main{
     height:100%;
 }
 
+.mat-expansion-panel-spacing {
+    margin: 0px 0;
+}
+
+#top_panel{
+    margin-top: 4px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 0px;
+    border-bottom-left-radius: 0px;
+}
+
+.mat-expansion-panel{
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+    border-bottom-left-radius: 0px;    
+}
+
+#bottom_panel{
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+
 header{
     background-color: darkgray;
     display: grid;
